Murman sein NEWS file huebsch gmacht.
git-svn-id: http://darwin/svn/unix/chpp/trunk@117 cefd48d6-89e4-0310-8b86-be731dd2b999

--- a/NEWS
+++ b/NEWS
@@ -1660,8 +1660,9 @@ den rest im cvs manual lesen.
 
 ** fopen, fpipe
 
-bei fopen gibts jetz auch mode a - damit man was anhängen kann an a file
-fpipe hat vorn an neuen parameter, der bestimmt obs a reading oder a writing pipe is:
+bei fopen gibts jetz auch mode a - damit man was anhaengen kann an a
+file fpipe hat vorn an neuen parameter, der bestimmt obs a reading
+oder a writing pipe is:
 
   %fpipe(r, /bin/sh, -c, ls)
   %fpipe(w, /usr/sbin/sendmail,philipp)
