Added a few TODO's.
git-svn-id: http://darwin/svn/unix/chpp/trunk@120 cefd48d6-89e4-0310-8b86-be731dd2b999

--- a/TODO
+++ b/TODO
@@ -10,15 +10,23 @@
 
 + glob makro
 
++ cgi-interface vercoolen
+
 + datenbank interfaces
 
 + listq und hashq.
 
-+ scheisse reentrant machen.
-
 + nullbyte handeln.
 
++ environments als values
+
 + arithmetik besser machen (zahlenformate etc.)
+
++ values verallgemeinern
+
++ soviel wie moeglich entzuckern
+
++ scheisse reentrant machen.
 
 *** schani:
 
