Added TODO entries.
git-svn-id: http://darwin/svn/unix/chpp/trunk@121 cefd48d6-89e4-0310-8b86-be731dd2b999

--- a/TODO
+++ b/TODO
@@ -6,7 +6,9 @@
 
 + bytecode in file schreiben (i.e. precompiled code)
 
-+ chpp schneller machen
++ chpp schneller machen (listen, ...)
+
++ autoconf
 
 + glob makro
 
