Added TODO item. Updated simplex.
git-svn-id: http://darwin/svn/unix/chpp/trunk@122 cefd48d6-89e4-0310-8b86-be731dd2b999

--- a/TODO
+++ b/TODO
@@ -30,6 +30,8 @@
 
 + scheisse reentrant machen.
 
++ tutorial schreim
+
 *** schani:
 
 - beim for einbauen, dass nicht immer globale vars definiert werden.
