New builtins. Bugfixes. Beginning of break, return.
git-svn-id: http://darwin/svn/unix/chpp/trunk@139 cefd48d6-89e4-0310-8b86-be731dd2b999

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 *** prioritaeten:
 
++ --without-mysql, msql kurden
+
 + metachar aenderbar machen
 
 + break etc.
@@ -9,6 +11,8 @@
 + chpp schneller machen (listen, ...)
 
 + glob makro
+
++ rm, rmdir
 
 + cgi-interface vercoolen
 
