--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Changes since version 0.3.2:
+
+  * bugfixes
+
+  * new macros: srange, smap, return, flock, scrypt
+
+  * no documentation :-(((
+
 Changes since version 0.3.1:
 
   * bugfixes
