--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,24 @@
+Changes since version 0.3.4:
+
+  * bugfixes
+
+  * new macros: listSelect, fglob, timeUNIX, timeUNIX2Hash,
+    timeHash2UNIX, timeNow, eval, hdelete
+
+  * a let special form (similar to Lisp's let*)
+
+  * macros for manipulation of environments
+
+  * a defspecial special form for defining special forms :-)
+
+Changes since version 0.3.3:
+
+  * bugfixes
+
+  * updated documentation
+
+  * w3lib
+
 Changes since version 0.3.2:
 
   * bugfixes
